tests/NormalTests/paczka2/big_fuzzy/53490627.err
Error in line 7: CX56GazQ3i A548 194,57
Error in line 4: CX56GazQ3i A548 51,5
Error in line 9: CX56GazQ3i S988 42,7
Error in line 6: ZrTPA6x A916 62,9
Error in line 11: xro A916 63,3
Error in line 3: aqFhFM S988 48,7
Error in line 17: 5P33zjE8 S988 126,0
Error in line 15: aqFhFM A916 77,0
Error in line 26: 5P33zjE8 A916 96,4
Error in line 29: 5P33zjE8 S456 73,1
Error in line 10: CX56GazQ3i A916 63,7
Error in line 37: CX56GazQ3i S456 77,7
Error in line 48: aqFhFM S988 19,4
Error in line 52: 5P33zjE8 S456 30,7
Error in line 58: ZrTPA6x S988 -2,8
Error in line 40: CX56GazQ3i S988 2,8
Error in line 82: aqFhFM S456 65,0
Error in line 84: 5P33zjE8 A548 7,2
Error in line 77: A916 A916 27,6
Error in line 99: xro A548 57,9
Error in line 103: CX56GazQ3i S988 21,6
Error in line 106: xro A548 62,5
Error in line 117: Qqu7tJsHk Aq48 19,8
Error in line 107: xro S988 15,6
Error in line 120: ZrTPA6x A916 145,01
Error in line 114: Qqu7tJsHk S456 125,9
Error in line 126: aqFhFM A548 46,4
Error in line 128: aqFhFM S456 19,1
Error in line 121: Qqu7tJsHk A548 49,3
Error in line 139: 5P33zjE8 A916 64,9
Error in line 143: Qqu7tJsHk S456 82,5
Error in line 141: 5P33zjE8 A548 90,2
Error in line 155: xro S988 78,3
Error in line 161: Qqu7tJsHk A916 15,1
Error in line 168: ZrTPA6x A916 8,8
Error in line 176: 5P33zjE8 A548 16,7
Error in line 184: CX56GazQ3i A548 64,6
Error in line 190: CX56GazQ3i S456 43,8
Error in line 179: ZrTPA6x A548 90,5
Error in line 201: ZrTPA6x A916 75,8
Error in line 217: CX56GazQ3i S456 152,27
Error in line 199: CX56GazQ3i S456 34,4
Error in line 222: aqFhFM S456 57,1
Error in line 245: CX56GazQ3i S456 58,0
